--- a/.CI/Jenkinsfile
+++ b/.CI/Jenkinsfile
@@ -18,6 +18,7 @@ pipeline {
             LIBDIR = "linux64"
           }
           steps {
+            sh 'hostname'
             autotools('gcc-4.8')
             autotools('gcc-5')
             autotools('clang-8')
@@ -35,6 +36,7 @@ pipeline {
             LIBDIR = "linux32"
           }
           steps {
+            sh 'hostname'
             autotools('gcc-4.8')
             autotools('gcc-5')
             autotools('clang-8')
