--- a/.CI/Jenkinsfile
+++ b/.CI/Jenkinsfile
@@ -45,7 +45,7 @@ pipeline {
 
 def allAutotools() {
   for (String CC in ["gcc-4.8", "gcc-5", "gcc-6", "gcc-7", "gcc-8", "clang-3.9", "clang-4.0", "clang-5.0", "clang-6.0", "clang-7"]) {
-    autotools(CC, CPPFLAGS)
+    autotools(CC, "")
   }
   for (String CPPFLAGS in ["-DNO_FILE_SYSTEM", "-DTABLE_SHARE", "-DNO_LOCALE", "-DNO_MUTEX"]) {
     autotools("gcc-8", CPPFLAGS)
